# seqlib

./: .ec  .gitignore  .gitmodules  .map  .sym  CMakeLists.txt  Makefile  README.md  seqlibConfig.cmake.in
include/: arr.h  ec.h  list.h  que.h  vec.h
include/algo/: search.h
src/: arr.c  list.c  que.c  vec.c
src/algo/: search.c
test/: CMakeLists.txt  algo.c  arr.c  list.c  que.c  vec.c
