add_executable(vec vec.c)
add_executable(algotest algo.c)
add_executable(que que.c)

target_include_directories(vec PRIVATE ../include)
target_link_libraries(vec seqlib)
target_include_directories(que PRIVATE ../include)
target_link_libraries(que seqlib)
target_include_directories(algotest PRIVATE ../include)
target_link_libraries(algotest seqlib)

add_test(NAME vector COMMAND vec 10 72 44 11 23 55 66 77 88 99 72 23)
add_test(NAME algo_sort COMMAND algotest sort 72 44 11 23 55 66 77 88 99 72 23)
add_test(NAME algo_search COMMAND algotest search 1 2 5 33 46 79 80 83 92)
add_test(NAME queue COMMAND que 5 72 44 11 23 55 66)